codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---




✔ Auto-reviewer approved Elpis to run rm -f /tmp/guardian-approved.sqlite this
  time

 Elpis · model gpt-5.6-sol · location /tmp/project
│                                                                       │CONTEXT LEDGER  context not measured · ≈0
› Ask Codex to do anything                                              │source estimates
│                                                                       │Tab controls · Alt+C hide · Ctrl+click open
│                                                                       │file
│                                                                       │
  ? for shortcuts                 context unknown · Tab Context Ledger  │SMART PRUNE                          [···] SYNC
                                                                        │Reading current thread state
                                                                        │Syncing… · /smart-prune on|off sets an explicit
                                                                        │state
                                                                        │
                                                                        │CONTEXT WINDOW  usage unavailable
                                                                        │Context measurement unavailable until the first
                                                                        │request snapshot
                                                                        │
                                                                        │No portable context is available.
