codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_request_permissions_renders_request_summary.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---




✔ Request approved for permission request: Need write access for generated
  report assets.

 Elpis · model gpt-5.6-sol · location /tmp/project
Elpising… (0s • esc to interrupt)                                 │CONTEXT LEDGER  context not measured · ≈0
│                                                                 │source estimates
› Ask Elpis to do anything                                        │Tab controls · Alt+C hide · Ctrl+click open
│                                                                 │file
│                                                                 │
│                                                                 │SMART PRUNE                      [···] SYNC
  ? for shortcuts           context unknown · Tab Context Ledger  │Reading current thread state
                                                                  │Syncing… · /smart-prune on|off sets an
                                                                  │explicit state
                                                                  │
                                                                  │CONTEXT WINDOW  usage unavailable
                                                                  │Context measurement unavailable until the
                                                                  │first request snapshot
                                                                  │
                                                                  │No portable context is available.
