codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_goal_continuation_drops_stale_reviews.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(rendered)
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
Reviewing approval request (0s • esc to interrupt)
  └ rm -rf '/tmp/current-review'

┌──────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                             │
└──────────────────────────────────────────────────────────────────────┘
  ? for shortcuts               100% context left · Tab Context Ledger
