codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(rendered)
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
Reviewing 2 approval requests (0s • esc to interrupt)
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'

┌──────────────────────────────────────────────────────────────────────┐
› Ask Elpis to do anything                                             │
└──────────────────────────────────────────────────────────────────────┘
  ? for shortcuts               100% context left · Tab Context Ledger
