codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_timed_out_exec_renders_warning_and_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 537
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---


 Elpis · model gpt-5.6-solEdefault · location /tmp/projectOST --data-binary
Elpising…r(0s • esc to interrupt)ple.com                                                │ CONTEXT LEDGER  context not measured · ≈0 source
                                                                                        │ estimates
────────────────────────────────────────────────────────────────────────────────────────┤ Tab controls · Alt+C hide · Ctrl+click open file
› Ask Elpis to do anything                                                              │
────────────────────────────────────────────────────────────────────────────────────────┤ SMART PRUNE                           [···] SYNC
  ? for shortcuts                               100% context left · Tab Context Ledger  │ Reading current thread state
                                                                                        │ Syncing… · /smart-prune on|off sets an explicit
                                                                                        │ state
                                                                                        │
                                                                                        │ SUBAGENTS                              [━━━●] ON
                                                                                        │ May delegate to other agents
                                                                                        │
                                                                                        │ CONTEXT WINDOW  usage unavailable
                                                                                        │ Context measurement unavailable until the first
                                                                                        │ request snapshot
                                                                                        │
                                                                                        │ No portable context is available.
