codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_write_stdin_review_status.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 113
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
Reviewing approval request (0s • esc to interru…│ CONTEXT LEDGER  context not
  └ send input to terminal 42: "confirm\n"      │ measured · ≈0 source
                                                │ estimates
────────────────────────────────────────────────┤ Tab controls · Alt+C hide ·
› Ask Elpis to do anything                      │ Ctrl+click open file
────────────────────────────────────────────────┤
        100% context left · Tab Context Ledger  │ SMART PRUNE       [···] SYNC
                                                │ Reading current thread state
                                                │ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  usage
                                                │ unavailable
                                                │ Context measurement
                                                │ unavailable until the first
                                                │ request snapshot
                                                │
                                                │ No portable context is
                                                │ available.
